2008-05-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/shell.c: Minor change so dropping connection during
	login prompt results in connection still being available.


2008-05-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/include/rtems/score/object.h,
	rtems/include/rtems/rtems/types.h: Added new defines OBJECTS_ID_NONE
	and RTEMS_ID_NONE.  No object can have this ID.

2008-05-27	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* include/rtems/fs.h, libblock/include/rtems/diskdevs.h,
	libblock/src/diskdevs.c, libcsupport/include/rtems/libio.h,
	libcsupport/src/base_fs.c, libcsupport/src/error.c,
	libcsupport/src/libio.c, libcsupport/src/mount.c, libfs/src/dosfs/fat.c,
	libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_handlers_dir.c,
	libfs/src/dosfs/msdos_handlers_file.c, libfs/src/dosfs/msdos_init.c,
	libfs/src/dosfs/msdos_initsupp.c, libfs/src/imfs/deviceio.c,
	libfs/src/imfs/imfs.h, libfs/src/imfs/imfs_config.c,
	libfs/src/imfs/imfs_creat.c, libfs/src/imfs/imfs_getchild.c,
	libfs/src/imfs/imfs_handlers_device.c,
	libfs/src/imfs/imfs_handlers_directory.c,
	libfs/src/imfs/imfs_handlers_link.c,
	libfs/src/imfs/imfs_handlers_memfile.c, libfs/src/imfs/imfs_init.c,
	libfs/src/imfs/imfs_initsupp.c, libfs/src/imfs/imfs_symlink.c,
	libfs/src/imfs/imfs_unixstub.c, libfs/src/imfs/miniimfs_init.c,
	posix/include/rtems/posix/psignal.h, posix/src/psignal.c,
	rtems/include/rtems/rtems/status.h, rtems/src/semtranslatereturncode.c,
	sapi/include/confdefs.h, sapi/include/rtems/io.h,
	sapi/src/ioregisterdriver.c, sapi/src/itronapi.c, sapi/src/posixapi.c:
	Added const qualifier to various pointers and data tables to
	reduce size of data area.
	IMFS: Fixed creation of symbolic links to avoid a compiler warning.
	DOSFS: Use LibBlock instead of read() to read the boot record.
	
2008-05-27	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* libcsupport/include/console.h: New define: CONSOLE_DEVICE_NAME.
